--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>xPhoenix – Cloud Architect</title>
+  <link rel="icon" type="image/png" href="favicon.png?v=2" />
   <style>
+    html {
+      scroll-behavior: smooth;
+    }
     body {
       margin: 0;
       padding: 0;
@@ -13,106 +17,108 @@
       color: white;
       text-align: center;
     }
-
+    nav {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background-color: #1f1c2c;
+      padding: 1rem 0;
+      z-index: 1000;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 0 1rem;
+      font-size: 1rem;
+    }
     h1 {
       font-size: 3em;
-      margin-top: 2rem;
+      margin-top: 4rem;
       margin-bottom: 0.2em;
     }
-
     p {
       font-size: 1.2em;
-      margin: 0 auto 2rem auto;
-      max-width: 800px;
-      line-height: 1.6;
+      margin-top: 0;
     }
-
-    h2 {
-      font-size: 2em;
-      margin-top: 2rem;
-    }
-
-    .section {
+    section {
       padding: 2rem;
+      scroll-margin-top: 80px;
     }
-
     #projects {
       background-color: #f9f9f9;
-      color: #333;
-      padding: 4rem 2rem;
+      color: #222;
     }
-
     .project-card {
       background: white;
       border-radius: 10px;
       padding: 1rem;
       width: 300px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-      margin: 1rem;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
-
-    .project-card a {
-      color: #0077cc;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
     footer {
-      margin-top: 3rem;
-      padding: 1rem;
+      padding: 2rem;
       font-size: 0.9em;
       color: #ccc;
     }
-
-    .projects-wrapper {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 2rem;
-      justify-content: center;
+    a {
+      color: #0077cc;
     }
   </style>
 </head>
+
 <body>
+  <nav>
+    <a href="#about">About</a>
+    <a href="#projects">Projects</a>
+    <a href="#contact">Contact</a>
+  </nav>
 
   <h1>xPhoenix</h1>
   <p>Cloud Solutions Architect • AWS Certified • Rising from the fire</p>
 
-  <section id="about" class="section">
-    <h2>About Me</h2>
-    <p>
+  <section id="about">
+    <h2 style="font-size: 2em; font-weight: bold;">About Me</h2>
+    <p style="margin-top: 1rem; font-size: 1.1em; line-height: 1.6;">
       Hello, I'm Irimekyen Salome Samuel — a certified AWS Cloud Solutions Architect Associate and a rising cloud security consultant. My journey into tech was born from a deep passion for building secure, scalable, and resilient cloud environments that empower businesses and protect data.
-
-      <br><br>
+      <br /><br />
       Before tech, I led transformative work as a community advocate and founder of <strong>Pride of Sheba</strong>, a nonprofit advancing the rights of sexual and gender minorities in Nigeria. That work fueled my commitment to security — especially where people, identity, and privacy intersect.
-
-      <br><br>
+      <br /><br />
       Now, I’m channeling that fire into building cloud solutions that not only solve problems but also protect people. I’m especially passionate about bridging cloud and cybersecurity with a future interest in AI and threat detection.
-
-      <br><br>
+      <br /><br />
       This portfolio showcases my projects, hands-on experience, and evolving journey into cloud and security. I'm open to remote jobs, freelance gigs, and collaborations.
     </p>
   </section>
 
   <section id="projects">
-    <h2>Projects</h2>
-    <div class="projects-wrapper">
+    <h2 style="text-align: center; font-size: 2rem; margin-bottom: 2rem;">Projects</h2>
+    <div style="display: flex; flex-wrap: wrap; gap: 2rem; justify-content: center;">
       <div class="project-card">
-        <h3>AWS Static Website Hosting</h3>
-        <p>Deployed a static personal portfolio website using Amazon S3, Route 53, CloudFront, and ACM.</p>
-        <a href="https://github.com/Irimeken/aws-portfolio-website" target="_blank">View on GitHub</a>
+        <h3 style="font-size: 1.2rem;">AWS Static Website Hosting</h3>
+        <p style="font-size: 0.95rem; margin: 0.5rem 0;">
+          Deployed a static personal portfolio website using Amazon S3, Route 53, CloudFront, and ACM.
+        </p>
+        <a href="https://github.com/Irimeken/xphoenix-portfolio" target="_blank">View on GitHub</a>
       </div>
-
       <div class="project-card" style="opacity: 0.4;">
-        <h3>Coming Soon</h3>
-        <p>More cloud architecture and security projects will appear here soon.</p>
+        <h3 style="font-size: 1.2rem;">Coming Soon</h3>
+        <p style="font-size: 0.95rem;">More cloud architecture and security projects will appear here soon.</p>
       </div>
+    </div>
+  </section>
+
+  <section id="contact" style="background-color: #1f1c2c; color: white;">
+    <h2 style="text-align: center; font-size: 2rem; margin-bottom: 1rem;">Contact Me</h2>
+    <p style="text-align: center; font-size: 1.1rem; margin-bottom: 2rem;">Interested in working together? Reach out!</p>
+    <div style="text-align: center;">
+      <a href="mailto:contact@xphoenix.dev" style="font-size: 1.1rem; color: #00c8ff; text-decoration: underline;">contact@xphoenix.dev</a>
+      <br /><br />
+      <a href="https://github.com/Irimeken" target="_blank" style="color: #00c8ff;">GitHub</a> |
+      <a href="https://www.linkedin.com/in/salome-irimekyen-samuel-pmp-psm-i-they-them-theirs-4b3833151/" target="_blank" style="color: #00c8ff;">LinkedIn</a>
     </div>
   </section>
 
   <footer>
     &copy; 2025 Irimekyen Salome Samuel · xphoenix.dev
   </footer>
-
 </body>
 </html>
-
