Restore full website layout and navbar sections

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <p style="margin-top: 1rem; font-size: 1.1em; line-height: 1.6;">
       Hello, I'm Irimekyen Salome Samuel — a certified AWS Cloud Solutions Architect Associate and a rising cloud security consultant. My journey into tech was born from a deep passion for building secure, scalable, and resilient cloud environments that empower businesses and protect data.
       <br /><br />
-      Before tech, I led transformative work as a community advocate and founder of <strong>Pride of Sheba</strong>, a nonprofit advancing the rights of sexual and gender minorities in Nigeria. That work fueled my commitment to security — especially where people, identity, and privacy intersect.
+      Before tech, I led transformative work as a community advocate and founder of <strong>Pride of Sheba</strong>, a nonprofit advancing the rights of sexual and gender minorities in Nigeria. That work fueled my commitment to security, especially where people, identity, and privacy intersect.
       <br /><br />
       Now, I’m channeling that fire into building cloud solutions that not only solve problems but also protect people. I’m especially passionate about bridging cloud and cybersecurity with a future interest in AI and threat detection.
       <br /><br />
@@ -110,7 +110,7 @@
     <h2 style="text-align: center; font-size: 2rem; margin-bottom: 1rem;">Contact Me</h2>
     <p style="text-align: center; font-size: 1.1rem; margin-bottom: 2rem;">Interested in working together? Reach out!</p>
     <div style="text-align: center;">
-      <a href="mailto:contact@xphoenix.dev" style="font-size: 1.1rem; color: #00c8ff; text-decoration: underline;">contact@xphoenix.dev</a>
+      <a href="mailto:salome@xphoenix.dev" style="font-size: 1.1rem; color: #00c8ff; text-decoration: underline;">contact@xphoenix.dev</a>
       <br /><br />
       <a href="https://github.com/Irimeken" target="_blank" style="color: #00c8ff;">GitHub</a> |
       <a href="https://www.linkedin.com/in/salome-irimekyen-samuel-pmp-psm-i-they-them-theirs-4b3833151/" target="_blank" style="color: #00c8ff;">LinkedIn</a>
