Restore full website layout and navbar sections

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <h2 style="text-align: center; font-size: 2rem; margin-bottom: 1rem;">Contact Me</h2>
     <p style="text-align: center; font-size: 1.1rem; margin-bottom: 2rem;">Interested in working together? Reach out!</p>
     <div style="text-align: center;">
-      <a href="mailto:salome@xphoenix.dev" style="font-size: 1.1rem; color: #00c8ff; text-decoration: underline;">contact@xphoenix.dev</a>
+      <a href="mailto:salome@xphoenix.dev" style="font-size: 1.1rem; color: #00c8ff; text-decoration: underline;">salome@xphoenix.dev</a>
       <br /><br />
       <a href="https://github.com/Irimeken" target="_blank" style="color: #00c8ff;">GitHub</a> |
       <a href="https://www.linkedin.com/in/salome-irimekyen-samuel-pmp-psm-i-they-them-theirs-4b3833151/" target="_blank" style="color: #00c8ff;">LinkedIn</a>
