--- a/index.html
+++ b/index.html
@@ -26,14 +26,20 @@
       z-index: 1000;
     }
     nav a {
+      margin: 0 1.5rem;
       color: white;
       text-decoration: none;
-      margin: 0 1rem;
       font-size: 1rem;
+    }
+    @media (max-width: 600px) {
+      nav a {
+        margin: 0 0.8rem;
+        font-size: 0.9rem;
+      }
     }
     h1 {
       font-size: 3em;
-      margin-top: 4rem;
+      margin-top: 3.5rem;
       margin-bottom: 0.2em;
     }
     p {
@@ -62,15 +68,19 @@
     }
     a {
       color: #0077cc;
+      text-decoration: none;
     }
   </style>
 </head>
 
 <body>
   <nav>
-    <a href="#about">About</a>
-    <a href="#projects">Projects</a>
-    <a href="#contact">Contact</a>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="projects.html">Projects</a>
+    <a href="certifications.html">Certifications</a>
+    <a href="contact.html">Contact</a>
+    <a href="blog.html">Blog</a>
   </nav>
 
   <h1>xPhoenix</h1>
@@ -80,11 +90,11 @@
     <h2 style="font-size: 2em; font-weight: bold;">About Me</h2>
     <p style="margin-top: 1rem; font-size: 1.1em; line-height: 1.6;">
       Hello, I'm Irimekyen Salome Samuel — a certified AWS Cloud Solutions Architect Associate and a rising cloud security consultant. My journey into tech was born from a deep passion for building secure, scalable, and resilient cloud environments that empower businesses and protect data.
-      <br /><br />
-      Before tech, I led transformative work as a community advocate and founder of <strong>Pride of Sheba</strong>, a nonprofit advancing the rights of sexual and gender minorities in Nigeria. That work fueled my commitment to security, especially where people, identity, and privacy intersect.
-      <br /><br />
+      <br><br>
+      Before tech, I led transformative work as a community advocate and founder of <strong>Pride of Sheba</strong>, a nonprofit advancing the rights of sexual and gender minorities in Nigeria. That work fueled my commitment to security — especially where people, identity, and privacy intersect.
+      <br><br>
       Now, I’m channeling that fire into building cloud solutions that not only solve problems but also protect people. I’m especially passionate about bridging cloud and cybersecurity with a future interest in AI and threat detection.
-      <br /><br />
+      <br><br>
       This portfolio showcases my projects, hands-on experience, and evolving journey into cloud and security. I'm open to remote jobs, freelance gigs, and collaborations.
     </p>
   </section>
@@ -92,33 +102,30 @@
   <section id="projects">
     <h2 style="text-align: center; font-size: 2rem; margin-bottom: 2rem;">Projects</h2>
     <div style="display: flex; flex-wrap: wrap; gap: 2rem; justify-content: center;">
+      
+      <!-- Project 1 -->
       <div class="project-card">
         <h3 style="font-size: 1.2rem;">AWS Static Website Hosting</h3>
         <p style="font-size: 0.95rem; margin: 0.5rem 0;">
-          Deployed a static personal portfolio website using Amazon S3, Route 53, CloudFront, and ACM.
+          Deployed a static personal portfolio website using Amazon S3, Route 53, CloudFront, and GitHub Actions.
         </p>
-        <a href="https://github.com/Irimeken/xphoenix-portfolio" target="_blank">View on GitHub</a>
+        <a href="https://github.com/Irimeken/xphoenix-portfolio" target="_blank">
+          View on GitHub
+        </a>
       </div>
+
+      <!-- Placeholder -->
       <div class="project-card" style="opacity: 0.4;">
         <h3 style="font-size: 1.2rem;">Coming Soon</h3>
         <p style="font-size: 0.95rem;">More cloud architecture and security projects will appear here soon.</p>
       </div>
-    </div>
-  </section>
 
-  <section id="contact" style="background-color: #1f1c2c; color: white;">
-    <h2 style="text-align: center; font-size: 2rem; margin-bottom: 1rem;">Contact Me</h2>
-    <p style="text-align: center; font-size: 1.1rem; margin-bottom: 2rem;">Interested in working together? Reach out!</p>
-    <div style="text-align: center;">
-      <a href="mailto:salome@xphoenix.dev" style="font-size: 1.1rem; color: #00c8ff; text-decoration: underline;">salome@xphoenix.dev</a>
-      <br /><br />
-      <a href="https://github.com/Irimeken" target="_blank" style="color: #00c8ff;">GitHub</a> |
-      <a href="https://www.linkedin.com/in/salome-irimekyen-samuel-pmp-psm-i-they-them-theirs-4b3833151/" target="_blank" style="color: #00c8ff;">LinkedIn</a>
     </div>
   </section>
 
   <footer>
     &copy; 2025 Irimekyen Salome Samuel · xphoenix.dev
   </footer>
+
 </body>
 </html>
