--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,9 @@
   <title>Contact – xPhoenix</title>
   <link rel="icon" type="image/png" href="favicon.png" />
   <style>
+    html {
+      scroll-behavior: smooth;
+    }
     body {
       margin: 0;
       padding: 0;
@@ -14,92 +17,116 @@
       color: white;
       text-align: center;
     }
-
-    header {
-      padding: 2rem 1rem;
-    }
-
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
-    }
-
-    p {
-      font-size: 1.1rem;
-      margin-bottom: 2rem;
-    }
-
-    form {
-      background-color: #ffffff15;
-      backdrop-filter: blur(4px);
-      max-width: 500px;
-      margin: 0 auto;
-      padding: 2rem;
-      border-radius: 10px;
-    }
-
-    input, textarea {
+    nav {
+      position: fixed;
+      top: 0;
       width: 100%;
-      padding: 0.8rem;
-      margin-bottom: 1rem;
-      border: none;
-      border-radius: 5px;
+      background-color: #1f1c2c;
+      padding: 1rem 0;
+      z-index: 1000;
+    }
+    nav div {
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
       font-size: 1rem;
     }
-
-    button {
-      background-color: #00c8ff;
+    nav a {
       color: white;
-      padding: 0.8rem 1.5rem;
+      text-decoration: none;
+    }
+    h1 {
+      margin-top: 5rem;
+      font-size: 2.8em;
+    }
+    form {
+      background: white;
+      color: #222;
+      max-width: 500px;
+      margin: 2rem auto;
+      padding: 2rem;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+    }
+    input, textarea {
+      width: 100%;
+      padding: 0.75rem;
+      margin: 0.5rem 0 1rem;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      font-size: 1rem;
+    }
+    button {
+      padding: 0.75rem 1.5rem;
+      background-color: #1f1c2c;
+      color: white;
       border: none;
       border-radius: 5px;
       font-size: 1rem;
       cursor: pointer;
     }
-
-    .social {
-      margin-top: 2rem;
-      font-size: 1rem;
+    button:hover {
+      background-color: #3a3756;
     }
-
-    .social a {
+    .contact-info {
+      margin-top: 2rem;
+      font-size: 1.1rem;
+    }
+    .contact-info a {
       color: #00c8ff;
       text-decoration: none;
-      margin: 0 0.5rem;
+      font-weight: bold;
     }
-
     footer {
-      margin-top: 3rem;
-      padding: 1rem;
-      font-size: 0.9rem;
+      padding: 2rem;
+      font-size: 0.9em;
       color: #ccc;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Let’s Connect</h1>
-    <p>I’m open to remote jobs, freelance work, and collaborations.</p>
-  </header>
 
-  <form>
-    <input type="text" name="name" placeholder="Your Name" required />
-    <input type="email" name="email" placeholder="Your Email" required />
-    <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+  <nav>
+    <div>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="projects.html">Projects</a>
+      <a href="certifications.html">Certifications</a>
+      <a href="contact.html">Contact</a>
+      <a href="blog.html">Blog</a>
+    </div>
+  </nav>
+
+  <h1>Contact Me</h1>
+
+  <form action="https://formsubmit.co/salome@xphoenix.dev" method="POST">
+    <!-- Protect against spam -->
+    <input type="hidden" name="_captcha" value="false">
+    <input type="hidden" name="_next" value="https://xphoenix.dev/thank-you.html">
+
+    <label for="name">Name</label>
+    <input type="text" id="name" name="name" required>
+
+    <label for="email">Your Email</label>
+    <input type="email" id="email" name="email" required>
+
+    <label for="message">Message</label>
+    <textarea id="message" name="message" rows="5" required></textarea>
+
     <button type="submit">Send Message</button>
-    <!-- Will be functional after we build the API in Project 2 -->
   </form>
 
-  <div class="social">
-    <p>Or email me directly at:</p>
+  <div class="contact-info">
+    Or email me directly at:  
     <a href="mailto:salome@xphoenix.dev">salome@xphoenix.dev</a>
     <br><br>
-    <a href="https://github.com/Irimeken" target="_blank">GitHub</a> |
+    <a href="https://github.com/Irimeken" target="_blank">GitHub</a> | 
     <a href="https://www.linkedin.com/in/salome-irimekyen-samuel-pmp-psm-i-they-them-theirs-4b3833151/" target="_blank">LinkedIn</a>
   </div>
 
   <footer>
     &copy; 2025 Irimekyen Salome Samuel · xphoenix.dev
   </footer>
+
 </body>
 </html>
