--- a/contact.html
+++ b/contact.html
@@ -1,132 +1,49 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contact – xPhoenix</title>
-  <link rel="icon" type="image/png" href="favicon.png" />
-  <style>
-    html {
-      scroll-behavior: smooth;
-    }
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #1f1c2c, #928dab);
-      color: white;
-      text-align: center;
-    }
-    nav {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background-color: #1f1c2c;
-      padding: 1rem 0;
-      z-index: 1000;
-    }
-    nav div {
-      display: flex;
-      justify-content: center;
-      gap: 2rem;
-      font-size: 1rem;
-    }
-    nav a {
-      color: white;
-      text-decoration: none;
-    }
-    h1 {
-      margin-top: 5rem;
-      font-size: 2.8em;
-    }
-    form {
-      background: white;
-      color: #222;
-      max-width: 500px;
-      margin: 2rem auto;
-      padding: 2rem;
-      border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
-    }
-    input, textarea {
-      width: 100%;
-      padding: 0.75rem;
-      margin: 0.5rem 0 1rem;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-      font-size: 1rem;
-    }
-    button {
-      padding: 0.75rem 1.5rem;
-      background-color: #1f1c2c;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      font-size: 1rem;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #3a3756;
-    }
-    .contact-info {
-      margin-top: 2rem;
-      font-size: 1.1rem;
-    }
-    .contact-info a {
-      color: #00c8ff;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    footer {
-      padding: 2rem;
-      font-size: 0.9em;
-      color: #ccc;
-    }
-  </style>
-</head>
-<body>
-
-  <nav>
-    <div>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="projects.html">Projects</a>
-      <a href="certifications.html">Certifications</a>
-      <a href="contact.html">Contact</a>
-      <a href="blog.html">Blog</a>
-    </div>
-  </nav>
-
-  <h1>Contact Me</h1>
-
-  <form action="https://formsubmit.co/salome@xphoenix.dev" method="POST">
-    <!-- Protect against spam -->
-    <input type="hidden" name="_captcha" value="false">
-    <input type="hidden" name="_next" value="https://xphoenix.dev/thank-you.html">
-
-    <label for="name">Name</label>
-    <input type="text" id="name" name="name" required>
-
-    <label for="email">Your Email</label>
-    <input type="email" id="email" name="email" required>
-
-    <label for="message">Message</label>
-    <textarea id="message" name="message" rows="5" required></textarea>
-
-    <button type="submit">Send Message</button>
-  </form>
-
-  <div class="contact-info">
-    Or email me directly at:  
-    <a href="mailto:salome@xphoenix.dev">salome@xphoenix.dev</a>
-    <br><br>
-    <a href="https://github.com/Irimeken" target="_blank">GitHub</a> | 
-    <a href="https://www.linkedin.com/in/salome-irimekyen-samuel-pmp-psm-i-they-them-theirs-4b3833151/" target="_blank">LinkedIn</a>
+<section id="contact" style="padding: 4rem 2rem; background-color: #1f1c2c; color: white;">
+  <h2 style="text-align: center; font-size: 2rem; margin-bottom: 1rem;">Contact Me</h2>
+  <p style="text-align: center; font-size: 1.1rem; margin-bottom: 2rem;">
+    Interested in working together? Send me a message below.
+  </p>
+  <div style="max-width: 500px; margin: auto;">
+    <form id="contact-form">
+      <input type="text" id="name" name="name" placeholder="Your Name" required style="width: 100%; padding: 0.8rem; margin-bottom: 1rem;">
+      <input type="email" id="email" name="email" placeholder="Your Email" required style="width: 100%; padding: 0.8rem; margin-bottom: 1rem;">
+      <textarea id="message" name="message" placeholder="Your Message" required style="width: 100%; padding: 0.8rem; margin-bottom: 1rem;"></textarea>
+      <button type="submit" style="padding: 0.8rem 2rem; background-color: #00c8ff; color: white; border: none;">Send</button>
+    </form>
+    <p id="response-msg" style="margin-top: 1rem;"></p>
   </div>
+</section>
 
-  <footer>
-    &copy; 2025 Irimekyen Salome Samuel · xphoenix.dev
-  </footer>
+<script>
+  document.getElementById('contact-form').addEventListener('submit', async function(e) {
+    e.preventDefault();
 
-</body>
-</html>
+    const responseMsg = document.getElementById('response-msg');
+    responseMsg.textContent = 'Sending...';
+
+    const data = {
+      name: document.getElementById('name').value.trim(),
+      email: document.getElementById('email').value.trim(),
+      message: document.getElementById('message').value.trim()
+    };
+
+    try {
+      const response = await fetch('https://uj5zorrsa3.execute-api.us-east-1.amazonaws.com/prod', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify(data)
+      });
+
+      if (response.ok) {
+        responseMsg.textContent = '✅ Message sent successfully!';
+        document.getElementById('contact-form').reset();
+      } else {
+        responseMsg.textContent = '❌ Something went wrong. Please try again later.';
+      }
+    } catch (error) {
+      responseMsg.textContent = '❌ Network error. Please try again later.';
+    }
+  });
+</script>
