--- a/contact.html
+++ b/contact.html
@@ -1,49 +1,124 @@
-<section id="contact" style="padding: 4rem 2rem; background-color: #1f1c2c; color: white;">
-  <h2 style="text-align: center; font-size: 2rem; margin-bottom: 1rem;">Contact Me</h2>
-  <p style="text-align: center; font-size: 1.1rem; margin-bottom: 2rem;">
-    Interested in working together? Send me a message below.
-  </p>
-  <div style="max-width: 500px; margin: auto;">
-    <form id="contact-form">
-      <input type="text" id="name" name="name" placeholder="Your Name" required style="width: 100%; padding: 0.8rem; margin-bottom: 1rem;">
-      <input type="email" id="email" name="email" placeholder="Your Email" required style="width: 100%; padding: 0.8rem; margin-bottom: 1rem;">
-      <textarea id="message" name="message" placeholder="Your Message" required style="width: 100%; padding: 0.8rem; margin-bottom: 1rem;"></textarea>
-      <button type="submit" style="padding: 0.8rem 2rem; background-color: #00c8ff; color: white; border: none;">Send</button>
-    </form>
-    <p id="response-msg" style="margin-top: 1rem;"></p>
-  </div>
-</section>
-
-<script>
-  document.getElementById('contact-form').addEventListener('submit', async function(e) {
-    e.preventDefault();
-
-    const responseMsg = document.getElementById('response-msg');
-    responseMsg.textContent = 'Sending...';
-
-    const data = {
-      name: document.getElementById('name').value.trim(),
-      email: document.getElementById('email').value.trim(),
-      message: document.getElementById('message').value.trim()
-    };
-
-    try {
-      const response = await fetch('https://uj5zorrsa3.execute-api.us-east-1.amazonaws.com/prod', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json'
-        },
-        body: JSON.stringify(data)
-      });
-
-      if (response.ok) {
-        responseMsg.textContent = '✅ Message sent successfully!';
-        document.getElementById('contact-form').reset();
-      } else {
-        responseMsg.textContent = '❌ Something went wrong. Please try again later.';
-      }
-    } catch (error) {
-      responseMsg.textContent = '❌ Network error. Please try again later.';
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Contact – xPhoenix</title>
+  <link rel="icon" href="favicon.png" />
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #1f1c2c;
+      color: white;
+      margin: 0;
+      padding: 0;
     }
-  });
-</script>
+    nav {
+      background-color: #1f1c2c;
+      padding: 1rem 0;
+      text-align: center;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+    nav a {
+      margin: 0 1rem;
+      color: white;
+      text-decoration: none;
+      font-weight: 500;
+    }
+    section {
+      padding: 4rem 2rem;
+      max-width: 600px;
+      margin: auto;
+      text-align: center;
+    }
+    input, textarea {
+      width: 100%;
+      padding: 1rem;
+      margin: 0.8rem 0;
+      border: none;
+      border-radius: 4px;
+    }
+    button {
+      background-color: #00c8ff;
+      border: none;
+      padding: 0.9rem 2rem;
+      color: white;
+      font-size: 1rem;
+      cursor: pointer;
+      border-radius: 4px;
+    }
+    #response-msg {
+      margin-top: 1rem;
+      font-size: 1rem;
+    }
+    footer {
+      text-align: center;
+      padding: 2rem;
+      color: #ccc;
+      font-size: 0.9rem;
+    }
+  </style>
+</head>
+<body>
+
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="projects.html">Projects</a>
+    <a href="certifications.html">Certifications</a>
+    <a href="contact.html">Contact</a>
+    <a href="blog.html">Blog</a>
+  </nav>
+
+  <section id="contact">
+    <h2>Contact Me</h2>
+    <p>Interested in working together? Send me a message below.</p>
+    <form id="contact-form">
+      <input type="text" id="name" name="name" placeholder="Your Name" required />
+      <input type="email" id="email" name="email" placeholder="Your Email" required />
+      <textarea id="message" name="message" placeholder="Your Message" rows="6" required></textarea>
+      <button type="submit">Send</button>
+    </form>
+    <p id="response-msg"></p>
+  </section>
+
+  <footer>
+    &copy; 2025 Irimekyen Salome Samuel · xphoenix.dev
+  </footer>
+
+  <script>
+    document.getElementById('contact-form').addEventListener('submit', async function(e) {
+      e.preventDefault();
+
+      const responseMsg = document.getElementById('response-msg');
+      responseMsg.textContent = 'Sending...';
+
+      const data = {
+        name: document.getElementById('name').value.trim(),
+        email: document.getElementById('email').value.trim(),
+        message: document.getElementById('message').value.trim()
+      };
+
+      try {
+        const response = await fetch('https://uj5zorrsa3.execute-api.us-east-1.amazonaws.com/prod', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(data)
+        });
+
+        if (response.ok) {
+          responseMsg.textContent = '✅ Message sent successfully!';
+          document.getElementById('contact-form').reset();
+        } else {
+          responseMsg.textContent = '❌ Something went wrong. Please try again.';
+        }
+      } catch (err) {
+        responseMsg.textContent = '❌ Network error. Please check your connection.';
+      }
+    });
+  </script>
+
+</body>
+</html>
