--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
       };
 
       try {
-        const response = await fetch('https://uj5zorrsa3.execute-api.us-east-1.amazonaws.com/contact', {
+        const response = await fetch('https://uj5zorrsa3.execute-api.us-east-1.amazonaws.com/ContactFormHandler', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify(data)
