--- a/certifications.html
+++ b/certifications.html
@@ -138,12 +138,12 @@
       <a href="https://www.credly.com/earner/earned/badge/c8268be3-f8d5-49e2-b5a5-5af905fee4af" target="_blank">View Badge</a>
     </div>
 
-    <!-- AWS Placeholder -->
+    <!-- AWS Cloud Solutions Architect Associate -->
     <div class="cert-card placeholder">
       <h3>AWS Cloud Solutions Architect Associate</h3>
       <p><strong>Issuer:</strong> Amazon Web Services</p>
       <p><strong>Date Earned:</strong> June 13, 2025</p>
-      <p>Badge will be updated once issued by Credly.</p>
+      <a href="https://www.credly.com/earner/earned/badge/49204b31-3a94-42c6-972a-5f5cb789c22d" target="_blank">View Badge</a>
     </div>
 
   </div>
