--- a/certifications.html
+++ b/certifications.html
@@ -139,7 +139,7 @@
     </div>
 
     <!-- AWS Cloud Solutions Architect Associate -->
-    <div class="cert-card placeholder">
+    <div class="cert-card">
       <h3>AWS Cloud Solutions Architect Associate</h3>
       <p><strong>Issuer:</strong> Amazon Web Services</p>
       <p><strong>Date Earned:</strong> June 13, 2025</p>
