Update projects.html to mark Contact Form as live

--- a/projects.html
+++ b/projects.html
@@ -102,10 +102,16 @@
         <a href="https://github.com/Irimeken/xphoenix-portfolio" target="_blank">View on GitHub</a>
       </div>
 
-      <!-- Placeholder 1 -->
-      <div class="project-card" style="opacity: 0.6;">
-        <h3>Serverless Contact Form API</h3>
-        <p>Coming soon: API Gateway + Lambda + SES project for secure, backendless form submission.</p>
+      <!-- Project 2: Contact Form (Now Live) -->
+      <div class="project-card">
+        <h3>
+          <a href="contact.html" style="color: #222; text-decoration: none;">
+            Serverless Contact Form API
+          </a>
+        </h3>
+        <p>Secure, backendless form submission built with API Gateway, Lambda, and SES. Now fully deployed!</p>
+        <p><strong>Status:</strong> ✅ Live</p>
+        <a href="contact.html">View Contact Form</a>
       </div>
 
       <!-- Placeholder 2 -->
