Update contact form project to link to GitHub

--- a/projects.html
+++ b/projects.html
@@ -103,16 +103,13 @@
       </div>
 
       <!-- Project 2: Contact Form (Now Live) -->
-      <div class="project-card">
-        <h3>
-          <a href="contact.html" style="color: #222; text-decoration: none;">
-            Serverless Contact Form API
-          </a>
-        </h3>
-        <p>Secure, backendless form submission built with API Gateway, Lambda, and SES. Now fully deployed!</p>
-        <p><strong>Status:</strong> ✅ Live</p>
-        <a href="contact.html">View Contact Form</a>
-      </div>
+     <!-- Project 2 -->
+<div class="project-card">
+  <h3>Serverless Contact Form API</h3>
+  <p>Built with API Gateway, Lambda, and SES for secure, backendless email form submissions.</p>
+  <a href="https://github.com/Irimeken/xphoenix-portfolio/blob/main/contact.html" target="_blank">View on GitHub</a>
+</div>
+
 
       <!-- Placeholder 2 -->
       <div class="project-card" style="opacity: 0.4;">
